Finish Book Swagger
